add category and item code in item entity
