# docs/swagger.yaml
@@ -146,6 +146,10 @@ definitions:
     properties:
       buying_price:
         type: number
+      category:
+        type: string
+      code:
+        type: string
       company_id:
         type: string
       created_at:
